# Carrington Core Changelog

## 3.2

- Implemented support for feed-{post context} templates in content/ and excerpt/ dirs


## 3.1

- Updated some variable names
- Support for custom taxonomies within the general context
- Implemented checked and selected functions for options
- E_NOTICE clean
- Added PHP doc blocks
- Support for post formats in the single context
- Added support for custom post type archive pages in general context
- Relies on features in WordPress 3.1


## 3.0.1

- Added nonces to settings page
- Made title of settings page filterable
- Made menu item title filterable
- Support custom post types in AJAX archives
- Version # now tied to WP release # (this version, 3.0.1, released during WP 3.0)


## 3.0

- Added support for custom post types (WordPress 3.0)
- Support for child themes (including adding templates and plugins in child themes that do not exist in the parent theme)
- Allow custom functions to be filtered into the Single and Comment template selection process (already supported in General context selection)
- Make the posts_per_page setting work as intended (only on initial query)
- Support for nesting templates inside sub-directories in misc/ and forms/
- Removed use of deprecated function `get_the_author_ID`. Replaced with 2.8 `get_the_author_meta` (since 2.8.0). Users of versions of WordPress prior to 2.8.0 should be aware this change will cause problems for them.
- Define required Carrington settings in a more forgiving way, making it easier to use just part of Carrington on a site when desired
- Make gallery settings (implemented in CSS) specific to each gallery
- home.php is now only used in is_home() situations, not is_front_page() (reverses feature requested and added in v. 2.5)
- Added changelog


## 2.5

- added CFCT_CORE_VERSION constant
- added support for is_front_page() as 'home' in General context